Remove JVM --enable-preview